--- a/package.json
+++ b/package.json
@@ -1,14 +1,6 @@
 {
-  "name": "cust-mat-tooltip",
+  "name": "mat-custom-tooltip",
   "version": "0.0.1",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
-  },
   "peerDependencies": {
     "@angular/common": "^15.2.0",
     "@angular/core": "^15.2.0"
