--- a/tsconfig.lib.json
+++ b/tsconfig.lib.json
@@ -3,9 +3,9 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "../../out-tsc/lib",
-    // "declaration": true,
-    // "declarationMap": true,
-    // "inlineSources": true,
+    "declaration": true,
+    "declarationMap": true,
+    "inlineSources": true,
     "types": []
   },
   "exclude": [
