--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mat-custom-tooltip",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "An Angular library that extends Angular Material's tooltip with HTML content, custom positions, manual control, and accessibility support.",
   "author": "rajratna maitry",
   "repository": {
@@ -23,10 +23,5 @@
   "dependencies": {
     "tslib": "^2.3.0"
   },
-  "sideEffects": false,
-  "scripts": {
-    "build": "ng build MatCustomTooltip",
-    "test": "ng test MatCustomTooltip",
-    "publish": "npm run build && npm publish dist/mat-custom-tooltip --access public"
-  }
+  "sideEffects": false
 }
